# gemctrl

./: .gitignore  CMakeLists.txt
src/: gemctrl.sln  gemctrl.vcxproj  gemctrl.vcxproj.filters  gemini.cpp  gemini.h  main.cpp
